@@ -28,6 +28,7 @@
     #popupmenu { position: absolute; border: 0; width: 150px; height: 150px; overflow : auto; z-index: 1000; }
     #popupmenu select { background-color: #E6E6E6; border: 1px solid black; padding: 1px; }
     input[type="checkbox"] { margin: 0 4px 0 0; float: left; }
+    .FormEl input.LineEd { position: absolute; left: 0px; border: 1px solid black; padding: 1px; }
   </style>
 </head>
 <body alink='#33ccff' link='#3366ff' text='#000000' vlink='#339999'>
